// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation tests default renderer 1`] = `
<div
  className="Navigation"
>
  <ForwardRef(WithStyles(FullScreenDialog))
    onClose={[Function]}
    onSubmit={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Navigation"
        id="cboard.components.Settings.Navigation.navigation"
        values={Object {}}
      />
    }
  >
    <ForwardRef(WithStyles(ForwardRef(Paper)))>
      <ForwardRef(WithStyles(ForwardRef(List)))>
        <ForwardRef(WithStyles(ForwardRef(ListItem)))>
          <ForwardRef(WithStyles(ForwardRef(ListItemText)))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Enable text..."
                id="cboard.components.Settings.Navigation.enable"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="some text secondary"
                id="cboard.components.Settings.Navigation.enableSecondary"
                values={Object {}}
              />
            }
          />
          <ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
            <ForwardRef(WithStyles(ForwardRef(Switch)))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
        </ForwardRef(WithStyles(ForwardRef(ListItem)))>
        <ForwardRef(WithStyles(ForwardRef(Divider))) />
        <ForwardRef(WithStyles(ForwardRef(ListItem)))>
          <ForwardRef(WithStyles(ForwardRef(ListItemText)))
            className="Display__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
            <ForwardRef(WithStyles(ForwardRef(Switch)))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
        </ForwardRef(WithStyles(ForwardRef(ListItem)))>
        <ForwardRef(WithStyles(ForwardRef(Divider))) />
        <ForwardRef(WithStyles(ForwardRef(ListItem)))>
          <ForwardRef(WithStyles(ForwardRef(ListItemText)))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
            <ForwardRef(WithStyles(ForwardRef(Switch)))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
        </ForwardRef(WithStyles(ForwardRef(ListItem)))>
        <ForwardRef(WithStyles(ForwardRef(Divider))) />
        <ForwardRef(WithStyles(ForwardRef(ListItem)))
          disabled={true}
        >
          <ForwardRef(WithStyles(ForwardRef(ListItemText)))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
            <ForwardRef(WithStyles(ForwardRef(Switch)))
              checked={false}
              color="secondary"
              disabled={true}
              onChange={[Function]}
              value="active"
            />
          </ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
        </ForwardRef(WithStyles(ForwardRef(ListItem)))>
        <ForwardRef(WithStyles(ForwardRef(Divider))) />
        <ForwardRef(WithStyles(ForwardRef(ListItem)))>
          <ForwardRef(WithStyles(ForwardRef(ListItemText)))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
            <ForwardRef(WithStyles(ForwardRef(Switch)))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </ForwardRef(WithStyles(ForwardRef(ListItemSecondaryAction)))>
        </ForwardRef(WithStyles(ForwardRef(ListItem)))>
      </ForwardRef(WithStyles(ForwardRef(List)))>
    </ForwardRef(WithStyles(ForwardRef(Paper)))>
  </ForwardRef(WithStyles(FullScreenDialog))>
</div>
`;

exports[`Navigation tests switchs behavior 1`] = `
<div
  className="Navigation"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Navigation"
        id="cboard.components.Settings.Navigation.navigation"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Enable text..."
                id="cboard.components.Settings.Navigation.enable"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="some text secondary"
                id="cboard.components.Settings.Navigation.enableSecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Display__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))
          disabled={true}
        >
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              disabled={true}
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;

exports[`Navigation tests switchs behavior 2`] = `
<div
  className="Navigation"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Navigation"
        id="cboard.components.Settings.Navigation.navigation"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Enable text..."
                id="cboard.components.Settings.Navigation.enable"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="some text secondary"
                id="cboard.components.Settings.Navigation.enableSecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={true}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Display__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={true}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={true}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))
          disabled={true}
        >
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              disabled={true}
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(Divider)) />
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Navigation__ListItemText"
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Switch))
              checked={false}
              color="secondary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;
